# solai

./: .gitignore
macos/sol-macOS/: sol-macOS-Bridging-Header.h
macos/sol-macOS/lib/: SolNative.swift
macos/sol.xcodeproj/: project.pbxproj
rust/: Cargo.toml  README.md  build.rs
rust/.cargo/: config
rust/src/: lib.rs  rust.udl
scripts/: build-rust-for-macos.sh
