[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.25.0", features = ["cli"] }
clipboard-rs = "0.3.0"
objc = "0.2.7"
core-graphics = "0.22.3"
cocoa = "0.24.0"
qrcode = "0.12"
image = "0.24.2"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[lib]
name = "rust"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
